fixed bottom scrollbar issue in responsiveness

--- a/less/index.less
+++ b/less/index.less
@@ -146,8 +146,10 @@ html, body {
 
 .container {
 	max-width: 800px;
-	margin: 0 auto;
-	padding: 2% 1.25%;
+	margin: auto; 
+	/* margin: 0 auto;
+	padding: 2% 1.25%; */
+
 	font-family: @karla-font;
 	color: @black-color;
 
@@ -346,8 +348,10 @@ html, body {
 /* Mixins - First Section */
 
 .firstsectionbox {
-	margin: .5rem;
-	width: 70%;
+	margin: .3rem;
+	width: auto; 
+	/* margin: .5rem;
+	width: 70%; /*/
 }
 
 @media(max-width: 500px) {
